[package]
edition = '2021'
name = "ton_executor"
version = "1.15.54"

[dependencies]
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
ton_vm = { git = "https://github.com/broxus/ton-labs-vm.git" }

# External
anyhow = "1.0.42"
log = "0.4.8"
thiserror = "1.0.26"
